--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -89,22 +89,22 @@
     "blocks": {
       "11532412952436166569": {
         "type": "shopify://apps/loox-reviews/blocks/loox-inject/5c3b337f-fd14-4df5-b1d6-80ec13e6e28e",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "4418769784723267737": {
         "type": "shopify://apps/styleai/blocks/seona_by_styleai/c2fdd8a2-5abf-48be-ab7f-5378cb014677",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "16278478101612877664": {
         "type": "shopify://apps/pagefly-page-builder/blocks/app-embed/83e179f7-59a0-4589-8c66-c0dddf959200",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "6570643953009571346": {
         "type": "shopify://apps/easyslide/blocks/easyslider-embed-product-widget/ef09cb22-75b5-48cd-995b-9c0856fc69a2",
-        "disabled": false,
+        "disabled": true,
         "settings": {
           "placement_selector": "",
           "multiple_widgets": false
@@ -122,12 +122,12 @@
       },
       "855628211100114053": {
         "type": "shopify://apps/klaviyo-email-marketing-sms/blocks/klaviyo-onsite-embed/2632fe16-c075-4321-a88b-50b567f42507",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "6810535121229352664": {
         "type": "shopify://apps/monster-cart-upsell-free-gifts/blocks/app-embed/a1b8e58a-bf1d-4e0f-8768-a387c3f643c0",
-        "disabled": false,
+        "disabled": true,
         "settings": {
           "markets_rounding": false,
           "send_gtag_atc": false,
@@ -146,22 +146,22 @@
       },
       "753360823172887587": {
         "type": "shopify://apps/crazyrocket-spin-wheel-pop-ups/blocks/crazyrocket-script/31762d47-a891-447e-9769-ef8b68621ed4",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "11560147490181472608": {
         "type": "shopify://apps/rivo-loyalty-rewards-referrals/blocks/app-embed/580e9665-b2cd-4dbc-b6ba-6445ac9e6871",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "9239498329101930193": {
         "type": "shopify://apps/recart-sms-list-growth/blocks/loader/c3f195f0-9f15-4ebc-9a44-84989a1ee8d1",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "11349500561483629931": {
         "type": "shopify://apps/notify-me/blocks/app-embed/b399b727-6c85-44fc-9e21-63114bd72054",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "11468047240823483236": {
