--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -37,7 +37,7 @@
     "price_superscript": true,
     "page_width": 1600,
     "spacing_sections": 0,
-    "page_transition_enabled": true,
+    "page_transition_enabled": false,
     "image_zoom_effect_enabled": true,
     "image_loading_bar_enabled": true,
     "button_border_thickness": 1,
