--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -89,7 +89,7 @@
     "blocks": {
       "11532412952436166569": {
         "type": "shopify://apps/loox-reviews/blocks/loox-inject/5c3b337f-fd14-4df5-b1d6-80ec13e6e28e",
-        "disabled": true,
+        "disabled": false,
         "settings": {}
       },
       "4418769784723267737": {
