--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -94,7 +94,7 @@
       },
       "4418769784723267737": {
         "type": "shopify://apps/styleai/blocks/seona_by_styleai/c2fdd8a2-5abf-48be-ab7f-5378cb014677",
-        "disabled": true,
+        "disabled": false,
         "settings": {}
       },
       "16278478101612877664": {
