--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -104,7 +104,7 @@
       },
       "6570643953009571346": {
         "type": "shopify://apps/easyslide/blocks/easyslider-embed-product-widget/ef09cb22-75b5-48cd-995b-9c0856fc69a2",
-        "disabled": true,
+        "disabled": false,
         "settings": {
           "placement_selector": "",
           "multiple_widgets": false
