--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -127,7 +127,7 @@
       },
       "6810535121229352664": {
         "type": "shopify://apps/monster-cart-upsell-free-gifts/blocks/app-embed/a1b8e58a-bf1d-4e0f-8768-a387c3f643c0",
-        "disabled": true,
+        "disabled": false,
         "settings": {
           "markets_rounding": false,
           "send_gtag_atc": false,
