--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -161,7 +161,7 @@
       },
       "11349500561483629931": {
         "type": "shopify://apps/notify-me/blocks/app-embed/b399b727-6c85-44fc-9e21-63114bd72054",
-        "disabled": true,
+        "disabled": false,
         "settings": {}
       },
       "11468047240823483236": {
