--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -99,7 +99,7 @@
       },
       "16278478101612877664": {
         "type": "shopify://apps/pagefly-page-builder/blocks/app-embed/83e179f7-59a0-4589-8c66-c0dddf959200",
-        "disabled": false,
+        "disabled": true,
         "settings": {}
       },
       "6570643953009571346": {
